<resources>
    <string name="app_name">FRredesign</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="back_button">Назад</string>
    <string name="send">Отправить</string>
    <string name="empty">Пусто</string>
    <string name="test_datetime">12-12-2020 00:00:00</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_error">Логин или пароль введены неверно</string>
    <string name="show_password">Показать пароль</string>
    <string name="save_password">Сохранить пароль</string>
    <string name="sign_in">Войти</string>
</resources>