<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_results"
        android:title="@string/results" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/camera" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/gallery" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>