<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kz.tengrilab.frredesign.ui.search.CarSearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="kz.tengrilab.frredesign.ui.results.ResultsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="kz.tengrilab.frredesign.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="kz.tengrilab.frredesign.ui.gallery.GalleryFragment"
        android:label="Gallery"
        tools:layout="@layout/fragment_gallery"/>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="kz.tengrilab.frredesign.ui.camera.ImageFragment"
        android:label="Camera"
        tools:layout="@layout/fragment_image"/>
</navigation>